# cogstack-jupyter-hub

./: .gitignore  .gitmodules  Dockerfile  Dockerfile_hub  Dockerfile_singleuser  Dockerfile_singleuser_gpu  README.md  docker-compose-dev.yml  docker-compose.yml  export_env_vars.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml  docker-jupyter-hub.yml  docker-jupyter-hub_arm64.yml  docker-jupyter-singleuser-gpu_arm64.yml  docker-jupyter-singleuser.yml  docker-jupyter-singleuser_arm64.yml  submodule_sync.yml
.github/workflows/: codeql.yml  docker-build.yml  docker-jupyter-hub.yml  docker-jupyter-hub_arm64.yml  docker-jupyter-singleuser-gpu.yml  docker-jupyter-singleuser-gpu_arm64.yml  docker-jupyter-singleuser.yml  docker-jupyter-singleuser_arm64.yml  docker-smoke-test.yml  helm-smoke-test.yml  submodule_sync.yml
charts/cogstack-jupyterhub/: .helmignore  Chart.yaml  README.md  values.yaml
charts/cogstack-jupyterhub/templates/: NOTES.txt  _helpers.tpl  configmap-env-files.yaml  configmap-hub-files.yaml  deployment.yaml  ingress.yaml  pvc-hub.yaml  pvc-scratch.yaml  secret-hub-files.yaml  service.yaml  serviceaccount.yaml
config/: jupyterhub_config.py
docker/: Makefile  docker-compose-dev.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
env/: jupyter.env
notebooks/: query_annotations_opensearch.ipynb  query_pgsql.ipynb
scripts/: helm_k8s_smoke_test.sh  update_env_cert_from_nifi_repo.sh
